--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nodemon": "^1.18.10"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node -- server.js",
+    "start-dev": "nodemon --exec babel-node -- server.js",
+    "start": "node server.js",
     "lint": "eslint --fix"
   },
   "license": "MIT"
