--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "nodemon": "^1.18.10"
   },
   "scripts": {
-    "start-dev": "nodemon --exec babel-node -- server.js",
-    "start": "node server.js",
+    "start-dev": "nodemon --exec babel-node -- server/server.js",
+    "start": "node dist/server/server.js",
+    "start:prod": "yarn build:prod && yarn start",
+    "build:prod": "rm -rf dist && NODE_ENV=production && babel server -d dist/server",
     "lint": "eslint --fix"
   },
   "license": "MIT"
