--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "nodemon": "^1.18.10"
   },
   "scripts": {
-    "start-dev": "nodemon --exec babel-node -- server/server.js",
-    "start": "babel-node server/server.js",
+    "start-dev": "nodemon --exec babel-node server.js",
+    "start": "babel-node server.js",
     "lint": "eslint --fix"
   },
   "license": "MIT"
